[gd_scene load_steps=18 format=3 uid="uid://couf5d2ja8hlw"]

[ext_resource type="PackedScene" uid="uid://cbug8uf2jfnsj" path="res://Scene/player.tscn" id="1_jv8gs"]
[ext_resource type="Texture2D" uid="uid://b6d4mpsdxod5h" path="res://Assets/tilemap/Cookie_dough.png" id="2_vh4eo"]
[ext_resource type="Theme" uid="uid://b7q7d172o1ecr" path="res://Themes/main.tres" id="2_yxby3"]
[ext_resource type="Script" uid="uid://c3rmepsfchfqx" path="res://Scripts/cookierlevel.gd" id="3_1bk83"]
[ext_resource type="Script" uid="uid://dn1gx7ihof05a" path="res://Scripts/destruction.gd" id="3_1btii"]
[ext_resource type="Script" uid="uid://jntpygkaorbk" path="res://Scripts/follow_cam.gd" id="3_htkpn"]
[ext_resource type="Script" uid="uid://2d5vv4dk6jwt" path="res://Scripts/cookVisual.gd" id="4_1bk83"]
[ext_resource type="Script" uid="uid://di1ylt0fak0" path="res://Scripts/follow_cam_center.gd" id="5_44mwd"]
[ext_resource type="Script" uid="uid://ca8pm8e8qp21q" path="res://Scripts/GameOver.gd" id="5_cvhse"]
[ext_resource type="PackedScene" uid="uid://dap31bc4almyo" path="res://Scene/pause_sceen.tscn" id="5_moty0"]
[ext_resource type="PackedScene" uid="uid://05p4v5puuijy" path="res://Scene/particle_explosion.tscn" id="6_qy5om"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_moty0"]
blend_mode = 1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qy5om"]
texture = ExtResource("2_vh4eo")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 8, -4, 8)
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -4, 8, 4, 4, 4, 4, 8, -4, 8, -4, -4)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -4, 8, 4, 4, 4, 4, 8, -4, 8, -4, 4, -8, 4, -8, -4)
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 4, 8, -4, 8, -4, 4, -8, 4, -8, -4)
3:0/0/terrains_peering_bit/bottom_side = 0
3:0/0/terrains_peering_bit/left_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, -8, -8, -8, 4, -4, 4, -4, 8, 4, 8, 4, 4, 8, 4, 8, -4, 4, -4)
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_side = 0
4:0/0/terrains_peering_bit/left_side = 0
4:0/0/terrains_peering_bit/top_left_corner = 0
4:0/0/terrains_peering_bit/top_side = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4, -8, 4, -4, 4, -4, 8, 8, 8, 8, -4)
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_right_corner = 0
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/left_side = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -4, 8, 4, 4, 4, 4, 8, -8, 8, -8, -4)
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/bottom_left_corner = 0
6:0/0/terrains_peering_bit/left_side = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/terrain = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -8, 8, -8, 8, 4, 4, 4, 4, 8, -4, 8, -4, 4, -8, 4, -8, -4, -4, -4)
7:0/0/terrains_peering_bit/right_side = 0
7:0/0/terrains_peering_bit/bottom_side = 0
7:0/0/terrains_peering_bit/left_side = 0
7:0/0/terrains_peering_bit/top_side = 0
7:0/0/terrains_peering_bit/top_right_corner = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/terrain = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 8, 8, 8, 8, -4, -4, -4)
8:0/0/terrains_peering_bit/right_side = 0
8:0/0/terrains_peering_bit/bottom_right_corner = 0
8:0/0/terrains_peering_bit/bottom_side = 0
9:0/0 = 0
9:0/0/terrain_set = 0
9:0/0/terrain = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4, -8, 8, 8, 8, 8, -4, 4, -4, 4, -8, -4, -8, -4, -4)
9:0/0/terrains_peering_bit/right_side = 0
9:0/0/terrains_peering_bit/bottom_right_corner = 0
9:0/0/terrains_peering_bit/bottom_side = 0
9:0/0/terrains_peering_bit/bottom_left_corner = 0
9:0/0/terrains_peering_bit/left_side = 0
9:0/0/terrains_peering_bit/top_side = 0
10:0/0 = 0
10:0/0/terrain_set = 0
10:0/0/terrain = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -4, 8, -4)
10:0/0/terrains_peering_bit/right_side = 0
10:0/0/terrains_peering_bit/bottom_right_corner = 0
10:0/0/terrains_peering_bit/bottom_side = 0
10:0/0/terrains_peering_bit/bottom_left_corner = 0
10:0/0/terrains_peering_bit/left_side = 0
11:0/0 = 0
11:0/0/terrain_set = 0
11:0/0/terrain = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 8, -8, 8, -8, -4, 4, -4)
11:0/0/terrains_peering_bit/bottom_side = 0
11:0/0/terrains_peering_bit/bottom_left_corner = 0
11:0/0/terrains_peering_bit/left_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -8, 4, -8, 4, 8, -4, 8)
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 4, -4, 8, -4, 8, 4, 4, 4, 4, 8, -4, 8, -4, -8)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/top_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 8, -4, 8, 4, 4, 4, 4, 8, -4, 8, -4, 4, -8, 4, -8, -4, -4, -4, -4, -8, 4, -8)
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 8, -4, 8, -4, 4, -8, 4, -8, -4, -4, -4, -4, -8, 4, -8)
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/left_side = 0
3:1/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 8, 8, 8, 8, -4, 4, -4, 4, -8, -4, -8)
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_right_corner = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/top_side = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -4, -8, -4, -4, -8, -4)
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_right_corner = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/bottom_left_corner = 0
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_side = 0
5:1/0/terrains_peering_bit/top_right_corner = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 4, -8, 4, -4, 8, -4)
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/bottom_left_corner = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_left_corner = 0
6:1/0/terrains_peering_bit/top_side = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 8, -8, 8, -8, -4, -4, -4, -4, -8, 4, -8)
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/bottom_left_corner = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_side = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -4, 8, -4, -8, 8, -8)
8:1/0/terrains_peering_bit/right_side = 0
8:1/0/terrains_peering_bit/bottom_right_corner = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/top_side = 0
8:1/0/terrains_peering_bit/top_right_corner = 0
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/terrain = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4, -4, -4, -4, -8, 8, -8, 8, 4, 4, 4, 4, 8, -8, 8)
9:1/0/terrains_peering_bit/right_side = 0
9:1/0/terrains_peering_bit/bottom_side = 0
9:1/0/terrains_peering_bit/bottom_left_corner = 0
9:1/0/terrains_peering_bit/left_side = 0
9:1/0/terrains_peering_bit/top_side = 0
9:1/0/terrains_peering_bit/top_right_corner = 0
11:1/0 = 0
11:1/0/terrain_set = 0
11:1/0/terrain = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, -8, -8, -8, 8, 4, 8, 4, 4, 8, 4, 8, -4, 4, -4)
11:1/0/terrains_peering_bit/right_side = 0
11:1/0/terrains_peering_bit/bottom_side = 0
11:1/0/terrains_peering_bit/bottom_left_corner = 0
11:1/0/terrains_peering_bit/left_side = 0
11:1/0/terrains_peering_bit/top_left_corner = 0
11:1/0/terrains_peering_bit/top_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -8, -4, 4, 4, 4, 4, -8)
0:2/0/terrains_peering_bit/top_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 4, -4, 8, -4, 8, 4, -4, 4, -4, -8)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -4, 8, -4, 8, 4, -8, 4, -8, -4, -4, -4, -4, -8, 4, -8)
2:2/0/terrains_peering_bit/right_side = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 4, -8, 4, -8, -4, -4, -4, -4, -8, 4, -8)
3:2/0/terrains_peering_bit/left_side = 0
3:2/0/terrains_peering_bit/top_side = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -8, 8, -8, 8, 4, 4, 4, 4, 8, -4, 8)
4:2/0/terrains_peering_bit/right_side = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/top_side = 0
4:2/0/terrains_peering_bit/top_right_corner = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -4, 8, -4, 4, -8, 4)
5:2/0/terrains_peering_bit/right_side = 0
5:2/0/terrains_peering_bit/bottom_right_corner = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/left_side = 0
5:2/0/terrains_peering_bit/top_left_corner = 0
5:2/0/terrains_peering_bit/top_side = 0
5:2/0/terrains_peering_bit/top_right_corner = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 4, 8, 4, 4, 8, 4)
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/bottom_left_corner = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_left_corner = 0
6:2/0/terrains_peering_bit/top_side = 0
6:2/0/terrains_peering_bit/top_right_corner = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, -8, -8, -8, 4, -4, 4, -4, 8, 4, 8)
7:2/0/terrains_peering_bit/bottom_side = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_left_corner = 0
7:2/0/terrains_peering_bit/top_side = 0
8:2/0 = 0
8:2/0/terrain_set = 0
8:2/0/terrain = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 8, 8, 8, 8, -8, -4, -8, -4, -4, -8, -4, -8, 4, -4, 4)
8:2/0/terrains_peering_bit/right_side = 0
8:2/0/terrains_peering_bit/bottom_right_corner = 0
8:2/0/terrains_peering_bit/bottom_side = 0
8:2/0/terrains_peering_bit/left_side = 0
8:2/0/terrains_peering_bit/top_side = 0
8:2/0/terrains_peering_bit/top_right_corner = 0
9:2/0 = 0
9:2/0/terrain_set = 0
9:2/0/terrain = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0/terrains_peering_bit/right_side = 0
9:2/0/terrains_peering_bit/bottom_right_corner = 0
9:2/0/terrains_peering_bit/bottom_side = 0
9:2/0/terrains_peering_bit/bottom_left_corner = 0
9:2/0/terrains_peering_bit/left_side = 0
9:2/0/terrains_peering_bit/top_left_corner = 0
9:2/0/terrains_peering_bit/top_side = 0
9:2/0/terrains_peering_bit/top_right_corner = 0
10:2/0 = 0
10:2/0/terrain_set = 0
10:2/0/terrain = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 4, -4, 8, -4, 8, 8, -4, 8, -4, 4, -8, 4, -8, -8)
10:2/0/terrains_peering_bit/right_side = 0
10:2/0/terrains_peering_bit/bottom_right_corner = 0
10:2/0/terrains_peering_bit/bottom_side = 0
10:2/0/terrains_peering_bit/left_side = 0
10:2/0/terrains_peering_bit/top_left_corner = 0
10:2/0/terrains_peering_bit/top_side = 0
11:2/0 = 0
11:2/0/terrain_set = 0
11:2/0/terrain = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 4, 8, 4, -8, -8, -8)
11:2/0/terrains_peering_bit/bottom_side = 0
11:2/0/terrains_peering_bit/bottom_left_corner = 0
11:2/0/terrains_peering_bit/left_side = 0
11:2/0/terrains_peering_bit/top_left_corner = 0
11:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 8, -4, 8, 4, -4, 4)
1:3/0/terrains_peering_bit/right_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4, 8, -4, 8, 4, -8, 4)
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4, 4, -4, 4, 4, -8, 4)
3:3/0/terrains_peering_bit/left_side = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, 8, -8, 8, -8, -4, -4, -4, -4, -8, 4, -8, 4, -4, 8, -4, 8, 4, 4, 4)
4:3/0/terrains_peering_bit/right_side = 0
4:3/0/terrains_peering_bit/bottom_side = 0
4:3/0/terrains_peering_bit/bottom_left_corner = 0
4:3/0/terrains_peering_bit/left_side = 0
4:3/0/terrains_peering_bit/top_side = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4, -8, -4, -4, -4, -4, -8, 8, -8, 8, 4)
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/left_side = 0
5:3/0/terrains_peering_bit/top_side = 0
5:3/0/terrains_peering_bit/top_right_corner = 0
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/terrain = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 4, 8, -4, 4, -4, 4, -8, -8, -8, -8, 4)
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/left_side = 0
6:3/0/terrains_peering_bit/top_left_corner = 0
6:3/0/terrains_peering_bit/top_side = 0
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/terrain = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 8, 8, 8, 8, -4, 4, -4, 4, -8, -4, -8, -4, -4, -8, -4, -8, 4, -4, 4)
7:3/0/terrains_peering_bit/right_side = 0
7:3/0/terrains_peering_bit/bottom_right_corner = 0
7:3/0/terrains_peering_bit/bottom_side = 0
7:3/0/terrains_peering_bit/left_side = 0
7:3/0/terrains_peering_bit/top_side = 0
8:3/0 = 0
8:3/0/terrain_set = 0
8:3/0/terrain = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -8, 8, -8, 8, 4, -4, 4)
8:3/0/terrains_peering_bit/right_side = 0
8:3/0/terrains_peering_bit/top_side = 0
8:3/0/terrains_peering_bit/top_right_corner = 0
9:3/0 = 0
9:3/0/terrain_set = 0
9:3/0/terrain = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 4, 8, 4)
9:3/0/terrains_peering_bit/right_side = 0
9:3/0/terrains_peering_bit/left_side = 0
9:3/0/terrains_peering_bit/top_left_corner = 0
9:3/0/terrains_peering_bit/top_side = 0
9:3/0/terrains_peering_bit/top_right_corner = 0
10:3/0 = 0
10:3/0/terrain_set = 0
10:3/0/terrain = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 4, 8, -8, -8, -8, -8, 4, -4, 4, -4, 8, 4, 8, 4, 4)
10:3/0/terrains_peering_bit/right_side = 0
10:3/0/terrains_peering_bit/bottom_side = 0
10:3/0/terrains_peering_bit/left_side = 0
10:3/0/terrains_peering_bit/top_left_corner = 0
10:3/0/terrains_peering_bit/top_side = 0
10:3/0/terrains_peering_bit/top_right_corner = 0
11:3/0 = 0
11:3/0/terrain_set = 0
11:3/0/terrain = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, -8, -8, -8, 4, 4, 4)
11:3/0/terrains_peering_bit/left_side = 0
11:3/0/terrains_peering_bit/top_left_corner = 0
11:3/0/terrains_peering_bit/top_side = 0
10:1/0 = 0
10:1/0/terrain_set = 0

[sub_resource type="TileSet" id="TileSet_1btii"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Cookie"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_qy5om")

[sub_resource type="Curve" id="Curve_1btii"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.025641, 0.520311), 0.0, 0.0, 0, 0, Vector2(0.864469, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_qy5om"]
curve = SubResource("Curve_1btii")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qy5om"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(320, 320, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, 1, 0)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
radial_velocity_min = -10.0
radial_velocity_max = -2.23517e-05
gravity = Vector3(0, -5, 0)
scale_min = 15.41
scale_max = 27.4
color = Color(0.447839, 0.11488, 9.62615e-08, 1)
alpha_curve = SubResource("CurveTexture_qy5om")
hue_variation_min = -0.03
hue_variation_max = 0.03
turbulence_initial_displacement_min = -4.0
turbulence_initial_displacement_max = -4.0

[node name="main_game" type="Node2D"]

[node name="square" parent="." node_paths=PackedStringArray("ground") instance=ExtResource("1_jv8gs")]
ground = NodePath("../MainWorld")

[node name="COOKIERLEVEL" parent="square/MainCam/BlocksEaten" index="0"]
offset_left = 0.0
offset_top = 0.0

[node name="Velocity" parent="square/MainCam/BlocksEaten" index="4"]
offset_left = -81.0
offset_top = -17.0
offset_right = -7.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 0.45098, 0.384314, 1)

[node name="Velocity2" type="Label" parent="square/MainCam/BlocksEaten" index="5"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -20.0
offset_right = -3.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(100, 10)
theme = ExtResource("2_yxby3")
theme_override_colors/font_color = Color(1, 0.0352941, 0, 1)
text = "1 SPEED
"
script = ExtResource("3_1bk83")
display = 3

[node name="Velocity3" type="Label" parent="square/MainCam/BlocksEaten" index="6"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -22.5
offset_bottom = 22.5
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(100, 10)
theme = ExtResource("2_yxby3")
text = "1 SPEED
"
script = ExtResource("3_1bk83")
display = 3

[node name="ColorRect" type="ColorRect" parent="square/MainCam/BlocksEaten" index="8"]
modulate = Color(1, 1, 1, 0)
top_level = true
light_mask = 0
material = SubResource("CanvasItemMaterial_moty0")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)
script = ExtResource("4_1bk83")

[node name="Lost" type="CanvasLayer" parent="square/MainCam" index="1"]

[node name="VBoxContainer" type="VBoxContainer" parent="square/MainCam/Lost"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.5
offset_top = -51.0
offset_right = 275.5
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("5_cvhse")

[node name="COOKIERLEVEL" type="Label" parent="square/MainCam/Lost/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yxby3")
theme_override_font_sizes/font_size = 43
text = "COOKIER LEVEL: 9999"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_1bk83")
display = 5

[node name="Rebake" type="Button" parent="square/MainCam/Lost/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yxby3")
text = "RE-BAKE"

[node name="Eat" type="Button" parent="square/MainCam/Lost/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yxby3")
text = "EAT"

[node name="CanvasLayer" type="CanvasLayer" parent="square/MainCam" index="2"]
visible = false

[node name="Pause_sceen" parent="square/MainCam/CanvasLayer" instance=ExtResource("5_moty0")]

[node name="MainWorld" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_1btii")
script = ExtResource("3_1btii")
map_size = Vector2i(100, 200)

[node name="LightBg" type="ColorRect" parent="."]
z_index = -10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -640.0
offset_right = 640.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 640)
color = Color(0.92, 0.506, 0, 1)
script = ExtResource("3_htkpn")

[node name="LightBg2" type="ColorRect" parent="."]
z_index = -20
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1280.0
offset_top = -1280.0
offset_right = 1280.0
offset_bottom = 1280.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1280, 1280)
color = Color(0.874842, 0.328001, 3.85046e-07, 1)
script = ExtResource("3_htkpn")

[node name="LightBg3" type="ColorRect" parent="."]
z_index = -30
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2577.0
offset_top = -1429.0
offset_right = 2543.0
offset_bottom = 1451.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.598469, 0, 0.0274776, 1)
script = ExtResource("3_htkpn")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = -5
amount = 64
lifetime = 10.0
explosiveness = 0.1
process_material = SubResource("ParticleProcessMaterial_qy5om")
script = ExtResource("5_44mwd")

[node name="ParticleExplosion" parent="GPUParticles2D" instance=ExtResource("6_qy5om")]

[connection signal="button_up" from="square/MainCam/Lost/VBoxContainer/Rebake" to="square/MainCam/Lost/VBoxContainer" method="_on_rebake_button_up"]
[connection signal="button_up" from="square/MainCam/Lost/VBoxContainer/Eat" to="square/MainCam/Lost/VBoxContainer" method="_on_eat_button_up"]

[editable path="square"]
[editable path="GPUParticles2D/ParticleExplosion"]
